# bluetooth-le

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  tsconfig.json
android/: build.gradle.kts  droidplug-debug.aar  droidplug.aar  local.properties  proguard-rules.pro
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/io/taurine/bluetooth_le/plugin/: TaurineBluetoothLE.kt  TaurineBluetoothLEPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  tsconfig.json  vite.config.ts
examples/tauri-app/src/: App.svelte  styles.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
src/: android.rs  bluetoothle.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
webview-dist/: index.d.ts  index.js  models.d.ts
webview-src/: index.ts  models.ts  rollup.config.js  tsconfig.json
