[package]
name = "tauri-plugin-taurine-bluetooth-le"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.65"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-taurine-bluetooth-le"

[target.'cfg(target_os = "android")'.dependencies]
once_cell = "1.18.0"
jni = { version = "0.19.0" }
jni-utils = { git = "https://github.com/deviceplug/jni-utils-rs.git" }

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
tauri = { version = "2.0.0-alpha.9" }
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.28.2" }

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.5" }
